--- a/public/frontend/assets/css/style.css
+++ b/public/frontend/assets/css/style.css
@@ -40,7 +40,10 @@
         color:orangered;
       }
 
-      .card_color {background-image: linear-gradient(to right, #4568DC 0%, #B06AB3  51%, #4568DC  100%)}
+      .card_color {
+          background-image: linear-gradient(to right, #4568DC 0%, #B06AB3  51%, #4568DC  100%);
+          min-height: 260px;
+        }
 
 
 
@@ -245,3 +248,78 @@
         font-size:14px;
     }
 
+/* End Barchart */
+
+.ppp{
+    font-style:italic;
+    font-size:18px;
+    font-weight:inherit;
+    color:#176cdb;
+}
+
+.bluecolor{
+    color:#176cdb;
+}
+
+/* design */
+
+.design {
+    border-radius: 4px;
+    background-color: #ce5bf1;
+    border: none;
+    color: #FFFFFF;
+    text-align: center;
+    font-size: 17px;
+    font-style: italic;
+    /* padding: 15px; */
+    /* width: 200px; */
+    transition: all 0.5s;
+    cursor: pointer;
+    /* margin: 5px; */
+  }
+
+  .design span {
+    cursor: pointer;
+    display: inline-block;
+    position: relative;
+    transition: 0.5s;
+  }
+
+  .design span:after {
+    content: '\00bb';
+    position: absolute;
+    opacity: 0;
+    top: 0;
+    right: -20px;
+    transition: 0.5s;
+  }
+
+  .design:hover span {
+    padding-right: 25px;
+  }
+
+  .design:hover span:after {
+    opacity: 1;
+    right: 0;
+  }
+
+  .design1 {
+    /* text-decoration: none;
+    display: inline-block; */
+    padding: 2px;
+    border-radius: 4px;
+    border: none;
+    color: #FFFFFF;
+    text-align: center;
+    font-size: 17px;
+  }
+
+  .design1:hover {
+    background-color: #ddd;
+    color: #176cdb;
+  }
+
+  .previous {
+    background-color: #ce5bf1;
+    color: white;
+  }
